# config-manager

./: .gitignore  Cargo.toml  README.md  test copy  test_toml  test_yaml
config-master/src/application/: mod.rs
config-master/src/application/dtos/: ws_query.rs
config-master/src/application/services/: configuration_service.rs  mod.rs  template_service.rs  validation_service.rs
config-master/src/domain/: mod.rs
config-master/src/domain/entities/: mod.rs  template.rs  validation_rule.rs
config-master/src/domain/events/: mod.rs
config-master/src/domain/repositories/: configuration_repository.rs  mod.rs
config-master/src/domain/services/: config_validation.rs  format_converter.rs  mod.rs
config-master/src/domain/value_objects/: config_path.rs
config-master/src/infrastructure/repositories/: file_config_repository.rs  mod.rs
config-master/src/shared/: mod.rs  utils.rs
example/: tcp_send.rs  ws_client.rs
raft-cluster/: build.rs
raft-cluster/examples/: client.rs
raft-cluster/proto/: raft.proto
raft-cluster/src/: cluster.rs  config.rs  lib.rs  main.rs  simple_raft.rs
raft-cluster/src/grpc/: client.rs  mod.rs  server.rs
raft-cluster/src/raft/: engine.rs  leader_election.rs  log.rs  log_replication.rs  mod.rs  node.rs  state_machine.rs
raft-cluster/src/storage/: mod.rs
src/: command.rs  error.rs  handler.rs  lib.rs  main.rs  model.rs
src/application/dtos/: mod.rs
src/application/services/: configuration_service.rs  template_service.rs  validation_service.rs
src/domain/entities/: configuration.rs  validation_rule.rs
src/domain/events/: config_changed.rs
src/domain/repositories/: configuration_repository.rs  template_repository.rs
src/domain/services/: env_override.rs  format_converter.rs
src/domain/value_objects/: config_format.rs  config_path.rs  mod.rs
src/infrastructure/: mod.rs
src/infrastructure/repositories/: file_config_repository.rs  memory_template_repository.rs
src/interfaces/: mod.rs
src/interfaces/http/: server.rs
src/interfaces/tcp/: server.rs
src/interfaces/websocket/: server.rs
src/model/: app.rs  config.rs  log.rs  mod.rs  validation.rs
src/shared/: app_state.rs  error.rs
(+3 files in other folders)
