[package]
name = "config-manager"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
clap = { version = "4.5.39", features = ["derive"] }
colored = "3.0.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
serde_yaml = "0.9.34"
thiserror = "2.0.12"
toml = "0.8.22"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
notify = { version = "8.0.0", features = ["serde"] }
tokio = { version = "1.45.1", features = ["full"] }
axum = "0.8.4"
tower = "0.5.2"

[[example]]
name = "tcp_send"
path = "example/tcp_send.rs"
