[package]
name = "config-manager"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
clap = { version = "4.5.39", features = ["derive"] }
colored = "3.0.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
serde_yaml = "0.9.34"
thiserror = "2.0.12"
toml = "0.8.22"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
notify = { version = "8.0.0", features = ["serde"] }
tokio = { version = "1.45.1", features = ["full"] }
axum = { version = "0.8.4", features = ["ws"] }
tower = "0.5.2"
chrono = { version = "0.4.41", features = ["serde"] }
rand = "0.8"
futures-util = "0.3"
async-trait = "0.1.88"

[[example]]
name = "tcp_send"
path = "example/tcp_send.rs"

[[example]]
name = "ws_client"
path = "example/ws_client.rs"

[dev-dependencies]
tokio-tungstenite = "0.20"
