[workspace]
resolver = "2"
members = [
    "config-master",
    "raft-cluster"
]

[workspace.dependencies]
tokio = { version = "1.45", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
toml = "0.8"
clap = { version = "4.0", features = ["derive"] }
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
notify = "8.0"
chrono = { version = "0.4", features = ["serde"] }
colored = "2.0"
async-trait = "0.1"
axum = { version = "0.7", features = ["ws"] }
futures-util = "0.3"
rand = "0.8"

# gRPC 相关依赖
tonic = "0.11"
prost = "0.12"
tonic-build = "0.11"

# 存储相关
rocksdb = "0.21"
uuid = { version = "1.0", features = ["v4"] }
